monitoring/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`grafana.kbnhvn-project.eu`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: monitoring-stack-grafana
      port: 80
    middlewares:
      - name: https-redirect
  - match: Host(`prometheus.kbnhvn-project.eu`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: monitoring-stack-kube-prom-prometheus
      port: 9090
    middlewares:
      - name: https-redirect
  tls:
    certResolver: letsencrypt
